# webhook-discord-rust

./: Cargo.toml  README.md
src/: log.rs  main.rs  paths.rs  vars.rs  webhooks.rs
